--- a/hyperspace/index.html
+++ b/hyperspace/index.html
@@ -88,9 +88,11 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2 class="oswald">Registration</h2>
+							<p>Registration will be open till 23rd January</p>
 							<!--Google forms embed code here-->
-							<br>
-							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesjApIU00kkLmxYOsYoGt-hz3GLpVDjGkPoDTPlNEQRUUxvw/viewform?embedded=true" width="640" height="1361" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							<p>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesjApIU00kkLmxYOsYoGt-hz3GLpVDjGkPoDTPlNEQRUUxvw/viewform?embedded=true" width="100%" height="1361" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							</p>
 						</div>
 					</section>
 
@@ -102,11 +104,11 @@
 								<p>
 									For any queries, contact:
 								</p>
-								<p><i><u>
+								<p><i>
 									Bhavya.G.Nair: 9188012281</i>
 								</p>
 								<p>
-									Abhidarsh A S : 8281862516
+									<i>Abhidarsh A S : 8281862516</i>
 								</p>
 								</u>
 
