--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="inner">
 							<h2 class="oswald">Registration</h2>
 							<p>Registration will be open till 23rd January</p>
-							<img src="images/brainbattle-logo-jpeg.jpeg" width="100%" height="125px">
+							<img src="images/brainbattle-logo-jpeg.jpeg" width="100%" height="100%">
 							<!--Google forms embed code here-->
 							<p>
 							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesjApIU00kkLmxYOsYoGt-hz3GLpVDjGkPoDTPlNEQRUUxvw/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -82,17 +82,18 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2 class="oswald">Contact Us</h2>
-							<div class="inner">
+							<br>
+							<div class="inner" >
 								<p>
 									For any queries, contact:
 								</p>
-								<p><i>
+								<p style=" margin-top: -20px; "><i>
 									Alex Joseph Pius: 8921686756</i>
 								</p>
-								<p>
+								<p style=" margin-top: -20px; ">
 									<i>Bhavya.G.Nair : 9188012281</i>
 								</p>
-								<p>
+								<p style=" margin-top: -20px; ">
 									<i>Abhidarsh A S : 8281862516</i>
 								</p>
 								
