--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style2 fade-up">
+					<section id="three" class="wrapper style2">
 						<div class="inner">
 							<h2 class="oswald">Contact Us</h2>
 							<br>
